# forcad

./: .codecov.yml  .fprettify.rc  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  STATUS.md  degree_1.csv  degree_2.csv  degree_3.csv  degree_4.csv  degree_5.csv  environment.yml  ford.yml  fpm.rsp  fpm.toml  index.html  package-lock.json  package.json  release.sh  search.html  workspace.code-workspace
.github/: dependabot.yml
app/: bench.f90
cmake/: package_config.cmake.in  uninstall.cmake.in
example/: cmp_area.f90  cmp_length.f90  cmp_volume.f90  demo_curve.f90  demo_surface.f90  demo_volume.f90  example_bend_pipe.f90  example_curve_1.f90  example_helix_pipe.f90  example_plate_hole_1_3d.f90  example_plate_hole_2_3d.f90  example_plate_hole_4_2d.f90  example_plate_hole_4_3d.f90  example_ppm1.f90  example_ppm2.f90  example_ppm3.f90  example_surface_1.f90  example_toroidal_pipe.f90  example_twist_taper.f90  example_volume_1.f90  lsq_fit_bspline_2d.f90  lsq_fit_bspline_3d.f90  lsq_fit_nurbs_2d.f90  nearest_point_1d.f90  nearest_point_2d.f90  nearest_point_2d_bench.f90  nearest_point_3d.f90  nurbs_curve.f90  nurbs_surface.f90  nurbs_volume.f90  poisson_iga_solver_2d.f90  poisson_iga_solver_3d.f90  put_to_nurbs.f90  put_to_nurbs_X.txt  put_to_nurbs_elem.txt  shape_C_1d.f90  shape_half_circle.f90  shape_hexahedron.f90  shape_ring.f90  shape_ring_2d.f90  (+1 more)
iges/: nurbs_curve.iges  nurbs_curve.igs  nurbs_curve2.iges  nurbs_curve2.igs  nurbs_curve3.iges  nurbs_curve3.igs  nurbs_surface.iges  nurbs_surface.igs  nurbs_surface2.iges  nurbs_surface2.igs  nurbs_surface3.iges  nurbs_surface3.igs  test_bsp_curve.iges  test_bsp_surface.iges  test_nurbs_curve.iges  test_nurbs_surface.iges
interface/: basis_bspline_2der.html  basis_bspline_der.html  compute_d2tgc.html  compute_d2tgc~2.html  compute_d2tgc~3.html  compute_dtgc.html  compute_dtgc~2.html  compute_dtgc~3.html  compute_multiplicity.html  compute_tgc.html  compute_tgc~2.html  compute_tgc~3.html  compute_xg.html  compute_xg~2.html  compute_xg~3.html  dyad.html  elemconn_c0.html  elemconn_cn.html  gauss_leg.html  kron.html  ndgrid.html  nearest_point_help_1d.html  nearest_point_help_2d.html  nearest_point_help_3d.html  unique.html
lists/: files.html  modules.html  procedures.html  programs.html  types.html
logo/: logo.f90
media/: logo.f90
module/: forcad.html  forcad_bezier_curve.html  forcad_bezier_surface.html  forcad_bezier_volume.html  forcad_interface.html  forcad_kinds.html  forcad_nurbs_curve.html  forcad_nurbs_surface.html  forcad_nurbs_volume.html  forcad_utils.html
proc/: ansatz.html  ansatz~2.html  ansatz~3.html  basis.html  basis_bernstein.html  basis_bspline.html  basis_bspline_2der.html  basis_bspline_2der_a.html  basis_bspline_2der_b.html  basis_bspline_2der_c.html  basis_bspline_der.html  basis_bspline_der_a.html  basis_bspline_der_b.html  basis_scalar.html  basis_scalar~2.html  basis_scalar~3.html  basis_vector.html  basis_vector~2.html  basis_vector~3.html  basis~2.html  basis~3.html  bend_pipe.html  bincoeff.html  build_helix.html  build_twist_taper.html  cmp_area.html  cmp_degree.html  cmp_degreeface.html  cmp_degree~2.html  cmp_degree~3.html  cmp_elem.html  cmp_elem_xc_vis.html  cmp_elem_xc_vis~2.html  cmp_elem_xc_vis~3.html  cmp_elem_xg_vis.html  cmp_elem_xg_vis~2.html  cmp_elem_xg_vis~3.html  cmp_elem_xth.html  cmp_elem_xth~2.html  cmp_elem_xth~3.html  (+392 more)
program/: compute_area.html  compute_length.html  compute_volume.html  example1_curve.html  example3_surface.html  example3_volume.html  example_bend_pipe.html  example_bezier_curve.html  example_bezier_surface.html  example_bezier_volume.html  example_helix_pipe.html  example_morph.html  example_nurbs_curve.html  example_nurbs_surface.html  example_nurbs_volume.html  example_plate_hole_1_2d.html  example_plate_hole_1_3d.html  example_plate_hole_2_2d.html  example_plate_hole_2_3d.html  example_plate_hole_4_2d.html  example_plate_hole_4_3d.html  example_ppm1.html  example_ppm2.html  example_ppm3.html  example_put_to_nurbs.html  example_toroidal_pipe.html  example_twist_taper.html  fdm_elevate_and_insert_1d.html  fdm_elevate_and_insert_2d.html  fdm_elevate_and_insert_3d.html  fdm_test_curve.html  fdm_test_surface.html  fdm_test_volume.html  lsq_fit_bspline_1d.html  lsq_fit_bspline_2d.html  lsq_fit_bspline_3d.html  lsq_fit_nurbs_1d.html  lsq_fit_nurbs_2d.html  lsq_fit_nurbs_3d.html  nearest_point_1d.html  (+21 more)
scripts/: plot.py
search/: search_database.json
sourcefile/: bezier_curve.f90.html  bezier_surface.f90.html  bezier_volume.f90.html  cmp_area.f90.html  cmp_length.f90.html  cmp_volume.f90.html  demo_curve.f90.html  demo_surface.f90.html  demo_volume.f90.html  example_bend_pipe.f90.html  example_curve_1.f90.html  example_helix_pipe.f90.html  example_plate_hole_1_2d.f90.html  example_plate_hole_1_3d.f90.html  example_plate_hole_2_2d.f90.html  example_plate_hole_2_3d.f90.html  example_plate_hole_4_2d.f90.html  example_plate_hole_4_3d.f90.html  example_ppm1.f90.html  example_ppm2.f90.html  example_ppm3.f90.html  example_surface_1.f90.html  example_toroidal_pipe.f90.html  example_twist_taper.f90.html  example_volume_1.f90.html  fdm_curve.f90.html  fdm_elevate_and_insert_1d.f90.html  fdm_elevate_and_insert_2d.f90.html  fdm_elevate_and_insert_3d.f90.html  fdm_surface.f90.html  fdm_volume.f90.html  forcad.f90.html  forcad_bezier_curve.f90.html  forcad_bezier_surface.f90.html  forcad_bezier_volume.f90.html  forcad_interface.f90.html  forcad_kinds.f90.html  forcad_nurbs_curve.f90.html  forcad_nurbs_surface.f90.html  forcad_nurbs_volume.f90.html  (+33 more)
src/: bezier_curve.f90  bezier_surface.f90  bezier_volume.f90  bspline_basis.f90  bspline_kinds.F90  bspline_utils.f90  cmp_area.f90  cmp_length.f90  cmp_volume.f90  demo_curve.f90  demo_surface.f90  demo_volume.f90  example_bend_pipe.f90  example_curve_1.f90  example_helix_pipe.f90  example_plate_hole_1_2d.f90  example_plate_hole_1_3d.f90  example_plate_hole_2_2d.f90  example_plate_hole_4_2d.f90  example_plate_hole_4_3d.f90  forcad.f90  (+49 more)
(+31 files in other folders)
